Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97394

Crash when using zwp_text_input_v2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.3.0 Alpha
    • 6.3
    • QPA: Wayland
    • None
    • Linux/Wayland
    • 5ce28f2696031edb2ff7e4ae8f62801fdb63d865 (qt/qtwayland/dev)

      It can be easily reproduced as following steps.

      1) run  pure-qml, a qtwayland example with QT_IM_MODULE=qtvirtualkeyboard

      2) run basic, a qtvirtualkeyboard example with QT_QPA_PLATFORM=wayland and QT_WAYLAND_TEXT_INPUT_PROTOCOL=zwp_text_input_v2

      (NOTE: edit main.cpp and comment line 36 setting QT_IM_MODULE)

       

      crash!

       

        For Gerrit Dashboard: QTBUG-97394
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            inho Inho Lee
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes