Support different text input protocols - update

This amends 99a6eb7b79471114705d7c68b0d5b388ea16ac03.

Only update text input when needed. And try to unregister the ones
which are not needed.

For client side, when QT_WAYLAND_TEXT_INPUT_PROTOCOL contains
multiple valid ones, the order doesn't matter now.

Fixes: QTBUG-97394
Task-number: QTBUG-96414
Change-Id: Ibe174056a4d4a4f2026e488d2ea99ec875b11ccc
Reviewed-by: Inho Lee <inho.lee@qt.io>